blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue
  name: blue-service
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: blue
  type: ClusterIP
