ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red-blue-ingress
spec:
  rules:
    - http:
        paths:
          - path: /red
            pathType: Prefix
            backend:
              service:
                name: red-service
                port:
                  number: 8080
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: blue-service
                port:
                  number: 8080
